--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:testOnly="false">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCThxlpflcLGVo2hx8O4iOwrLNwKho0vHM" />
